fix overflow

--- a/src/components/Content/Demo/Demo.scss
+++ b/src/components/Content/Demo/Demo.scss
@@ -2,6 +2,7 @@
   background-color: #f5f7fa;
   padding: 32px 0;
   text-align: center;
+  overflow: hidden;
   &-title {
     color: #263238;
     text-align: center;
