--- a/src/components/Content/Help/Help.scss
+++ b/src/components/Content/Help/Help.scss
@@ -1,6 +1,7 @@
 .help {
   padding: 64px 0;
   background-color: #f5f7fa;
+  overflow: hidden;
   &-wrapper {
     display: flex;
     gap: 72px;
